@@ -1,3 +1,8 @@
+2006-06-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* unix/tclLoadDl.c (TclpDlopen): Workaround for a compiler bug in Sun
+	Forte 6. [Bug 1503729]
+
 2006-06-06  Don Porter  <dgp@users.sourceforge.net>
 
         * doc/GetStdChan.3:     Added recommendation that each call to
